--- a/site/src/Students/hectorlabra.yml
+++ b/site/src/Students/hectorlabra.yml
@@ -28,40 +28,38 @@ basic_info:
     
     # Your profile picture URL
     # If you don't have it as a URL you can place the picture inside /static/profile-images/ and the generated link will be http://sep.breatheco.de/static/profile-images/<your file name>
-    avatar: https://randomuser.me/api/portraits/women/24.jpg
+    avatar: https://ibb.co/7CZ5SWR
 
     # Contact Information
-    email: a@a.com #optional
+    email: hlabrablistavap@gmail.com #optional
     phone: 234 2342 342 #optional
     website: asd.com #optional
-    linkedin: alandoe #optional
+    linkedin: https://www.linkedin.com/in/hectorlabrabarros/ #optional
     
     #
     # ******** IMPORTANT *******
     # This github username will be use to generate your public profile URL like this: http://sep.breatheco.de/sharu725
-    github: example
+    github: hectorlabra
     
-    twitter: 'webjeda' #optional
+    twitter: 'https://twitter.com/HLBDev' #optional
     stack-overflow: # Number/Username, e.g. 123456/alandoe
 
     # languages you speak, levels inculde: Native, Professional
     languages:
-      - idiom: English
-        level: Native
-
-      - idiom: French
-        level: Professional
 
       - idiom: Spanish
-        level: Professional
+        level: Native
+
+      - idiom: English
+        level: Advanced
 
     # Interests or hobies
     interests:
-      - item: Climbing
+      - item: Music
 
-      - item: Snowboarding
+      - item: Meditation
 
-      - item: Cooking
+      - item: Coding
 
 # Your previous education
 education:
